[gd_scene load_steps=9 format=2]

[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://ProyectilEspecialDeJugador.gd" type="Script" id=2]
[ext_resource path="res://Jefes/Caribdis/WaterShot2.png" type="Texture" id=3]
[ext_resource path="res://Jefes/Caribdis/WaterShot0.png" type="Texture" id=4]
[ext_resource path="res://Jefes/Caribdis/WaterShot1.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 3 ) ],
"loop": true,
"name": "WaterShot",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2, 1 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 4.167
height = 5.716

[node name="ProyectilEspecialDeJugador" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "WaterShot"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Hitbox" parent="." instance=ExtResource( 1 )]
collision_layer = 1
collision_mask = 8

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -1.706, 0 )
rotation = 1.5708
shape = SubResource( 3 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
bus = "Sonido"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
